Update CORS bean to match suggested code